# pearl

./: .gitmodules  .travis.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  MANIFEST.in  Makefile  README.md  pearl.conf  pyproject.toml  requirements-dev.in  requirements-dev.txt  setup.cfg  setup.py  tox.ini
.github/: FUNDING.yml
boot/: pearl.fish  pearl.sh
boot/emacs/: pearl.el
boot/fish/: pearl.fish
boot/sh/: pearl.sh
boot/vim/: pearl.vim
ci/: deploy.sh  hooks.sh  integ-tests.fish  integ-tests.sh
ci/test-utils/: utils.sh
ci/test-utils/installs/: install-linux-deps-fast.sh  install-linux-deps.sh  install-osx-deps-fast.sh  install-osx-deps.sh
ci/test-utils/integ-tests/: default-integ-tests.sh  default-travis.yml  integ-tests.fish  integ-tests.sh
etc/: pearl.conf.template
integ-tests/: install-fish.sh  install-linux-deps.sh  install-osx-deps.sh  integ-tests.fish  integ-tests.sh
lib/: utils.sh
lib/core/: package.sh  system.sh
lib/utils/: osx-compat.fish  osx-compat.sh  trycatch.sh  utils.sh
src/pearllib/: exceptions.py  messenger.py  models.py  package.py  parser.py  pearl.py  pearlenv.py  system.py  utils.py
src/pearllib/static/boot/emacs/: pearl.el
src/pearllib/static/boot/fish/: pearl.fish
src/pearllib/static/boot/sh/: pearl.sh
src/pearllib/static/boot/vim/: pearl.vim
src/pearllib/static/builtins/: utils.sh
src/pearllib/static/etc/: pearl.conf.template
src/pearllib/static/templates/: pearl.conf.template
src/pearllib/static/templates/pearl-config.template/: config.bash  config.el  config.fish  config.sh  config.vim  config.zsh  hooks.sh  install.sh  package.conf
tests/checkstyle/: checkstyle.sh
tests/integ-tests/: install-bash.sh  install-fish.sh  install-git.sh  install-linux-deps.sh  install-osx-deps.sh  install-zsh.sh  integ-tests.fish  integ-tests.sh
tests/pearllib/: test_package.py  test_pearlenv.py  test_system.py  test_utils.py
tests/test_pearllib/: test_builtins.py  test_models.py  test_package.py  test_parser.py  test_pearl.py  test_pearlenv.py  test_system.py  test_utils.py  utils.py
tests/unit-tests/: test-boot-pearl.sh  test-osx-compat.fish  test-osx-compat.sh  test-package.sh  test-pearl.sh  test-system.sh  test-trycatch.sh  test-utils.sh  unit-tests.sh  utils.sh
tests/utils/: utils.sh
